--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rilo - Location-Based Social App</title>
     <link href="./dist/styles.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
 <body class="bg-black text-white">
     <!-- Hero Section -->
@@ -19,13 +26,13 @@
                 Every moment is a memory
             </p>
             <div class="flex justify-center gap-4">
-                <a href="#" class="bg-gray-800/50 hover:bg-gray-800/70 text-white px-6 py-2 rounded-full text-sm font-medium transition-colors flex items-center">
+                <a href="#" class="bg-gray-800/50 hover:bg-gray-800/70 text-white px-6 py-2 rounded-full text-sm font-medium transition-all duration-300 hover:scale-110 hover:shadow-xl flex items-center">
                     <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.08 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 7.5c-.03-2.17 1.73-3.14 1.81-3.2.99-1.49 2.65-2.44 4.03-2.47.17 1.71-.47 3.46-1.5 4.59-.95 1.05-2.02 1.76-3.04 1.72-.15-1.15.45-2.35 1.7-3.64z"/>
                     </svg>
                     App Store
                 </a>
-                <a href="#" class="bg-gray-800/50 hover:bg-gray-800/70 text-white px-6 py-2 rounded-full text-sm font-medium transition-colors flex items-center">
+                <a href="#" class="bg-gray-800/50 hover:bg-gray-800/70 text-white px-6 py-2 rounded-full text-sm font-medium transition-all duration-300 hover:scale-110 hover:shadow-xl flex items-center">
                     <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M3 3v18l18-9z"/>
                     </svg>
@@ -36,7 +43,7 @@
     </section>
 
     <!-- Feature 1: Location-Based Discovery -->
-    <section class="py-8 px-4 bg-gradient-to-b from-black to-purple-900/10">
+    <section class="py-8 px-4 bg-gradient-to-b from-black to-purple-900/10" data-aos="fade-up">
         <div class="max-w-6xl mx-auto">
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div>
@@ -57,13 +64,13 @@
     </section>
 
     <!-- Feature 2: Real-time Chat -->
-    <section class="py-8 px-4 bg-gradient-to-b from-purple-900/10 to-black">
+    <section class="py-8 px-4 bg-gradient-to-b from-purple-900/10 to-black" data-aos="fade-up">
         <div class="max-w-6xl mx-auto">
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div class="order-2 md:order-1">
                     <div class="relative">
                         <div class="aspect-[9/14] max-w-[350px] mx-auto bg-purple-900/20 rounded-2xl overflow-hidden">
-                            <img src="./images/spot.png" alt="Chat Feature" class="w-full h-full object-cover object-top">
+                            <img src="./images/Spot.png" alt="Chat Feature" class="w-full h-full object-cover object-top">
                         </div>
                     </div>
                 </div>
@@ -80,7 +87,7 @@
     </section>
 
     <!-- Feature 3: Events & Activities -->
-    <section class="py-8 px-4 bg-gradient-to-b from-black to-purple-900/10">
+    <section class="py-8 px-4 bg-gradient-to-b from-black to-purple-900/10" data-aos="fade-up">
         <div class="max-w-6xl mx-auto">
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div>
@@ -101,7 +108,7 @@
     </section>
 
     <!-- Feature 4: Safety & Privacy -->
-    <section class="py-8 px-4 bg-gradient-to-b from-purple-900/10 to-black">
+    <section class="py-8 px-4 bg-gradient-to-b from-purple-900/10 to-black" data-aos="fade-up">
         <div class="max-w-6xl mx-auto">
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div class="order-2 md:order-1">
@@ -124,7 +131,7 @@
     </section>
 
     <!-- Call to Action -->
-    <section class="py-20 px-4 bg-gradient-to-b from-black to-purple-900/20">
+    <section class="py-20 px-4 bg-gradient-to-b from-black to-purple-900/20" data-aos="fade-up">
         <div class="max-w-4xl mx-auto text-center">
             <h2 class="text-4xl font-bold mb-6 bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600">
                 Ready to Connect?
@@ -132,14 +139,14 @@
             <p class="text-xl text-gray-300 mb-8">
                 Join Rilo today and start building meaningful connections in your community.
             </p>
-            <div class="flex flex-col sm:flex-row justify-center gap-4">
-                <a href="#" class="bg-purple-600 hover:bg-purple-700 text-white px-8 py-3 rounded-full text-lg font-semibold transition-colors flex items-center justify-center">
+            <div class="flex flex-col sm:flex-row justify-center gap-8">
+                <a href="#" class="bg-purple-600 hover:bg-purple-700 text-white px-10 py-4 text-xl font-semibold rounded-full shadow-lg hover:scale-110 transition-all flex items-center justify-center">
                     <svg class="w-6 h-6 mr-2" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.08 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 7.5c-.03-2.17 1.73-3.14 1.81-3.2.99-1.49 2.65-2.44 4.03-2.47.17 1.71-.47 3.46-1.5 4.59-.95 1.05-2.02 1.76-3.04 1.72-.15-1.15.45-2.35 1.7-3.64z"/>
                     </svg>
                     Download on App Store
                 </a>
-                <a href="#" class="bg-purple-600 hover:bg-purple-700 text-white px-8 py-3 rounded-full text-lg font-semibold transition-colors flex items-center justify-center">
+                <a href="#" class="bg-purple-600 hover:bg-purple-700 text-white px-10 py-4 text-xl font-semibold rounded-full shadow-lg hover:scale-110 transition-all flex items-center justify-center">
                     <svg class="w-6 h-6 mr-2" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M3 3v18l18-9z"/>
                     </svg>
@@ -150,7 +157,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-black py-12 px-4">
+    <footer class="bg-gradient-to-t from-purple-900/30 to-black py-12 px-4 border-t border-purple-900/20">
         <div class="max-w-6xl mx-auto">
             <div class="grid md:grid-cols-2 gap-8">
                 <div>
@@ -183,7 +190,7 @@
                     <div>
                         <h4 class="text-lg font-semibold mb-4">Legal</h4>
                         <ul class="space-y-2 text-gray-400">
-                            <li><a href="#" class="hover:text-white transition-colors">Terms of Service</a></li>
+                            <li><a href="/terms.html" class="hover:text-white transition-colors">Terms of Service</a></li>
                             <li><a href="#" class="hover:text-white transition-colors">Privacy Policy</a></li>
                         </ul>
                     </div>
@@ -194,5 +201,11 @@
             </div>
         </div>
     </footer>
+    <script>
+        AOS.init({
+            duration: 1000,
+            once: false
+        });
+    </script>
 </body>
 </html> 
