Rename terms.html to terms-of-service.html and update all references

--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -206,7 +206,7 @@
     <footer class="bg-gradient-to-t from-purple-900/30 to-black py-12 px-4 border-t border-purple-900/20 mt-12">
         <div class="max-w-6xl mx-auto text-center text-gray-400">
             <a href="/index.html" class="text-gray-400 hover:text-white transition-colors">홈</a> |
-            <a href="/terms.html" class="text-gray-400 hover:text-white transition-colors">이용약관</a>
+            <a href="/terms-of-service.html" class="text-gray-400 hover:text-white transition-colors">이용약관</a>
             <div class="mt-6">&copy; 2025 Rilo. All rights reserved.</div>
         </div>
     </footer>
