--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,7 @@
                     <div>
                         <h4 class="text-lg font-semibold mb-4">Legal</h4>
                         <ul class="space-y-2 text-gray-400">
-                            <li><a href="/terms.html" class="hover:text-white transition-colors">Terms of Service</a></li>
+                            <li><a href="https://www.rilo.life/terms-of-service.html" class="hover:text-white transition-colors">Terms of Service</a></li>
                             <li><a href="#" class="hover:text-white transition-colors">Privacy Policy</a></li>
                         </ul>
                     </div>
