Add meta description to Terms of Service page

--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rilo 이용약관 - 위치 기반 소셜 네트워킹 서비스의 이용 약관을 확인하세요.">
     <title>이용약관 | Rilo</title>
     <link href="./dist/styles.css" rel="stylesheet">
     <style>
