Improve spacing in Terms of Service page

--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -8,6 +8,12 @@
     <link href="./dist/styles.css" rel="stylesheet">
     <style>
         html { scroll-behavior: smooth; }
+        .prose p { margin-bottom: 1.5em; }
+        .prose h2 { margin-top: 2em; margin-bottom: 1em; }
+        .prose h3 { margin-top: 1.5em; margin-bottom: 0.75em; }
+        .prose ol, .prose ul { margin-bottom: 1.5em; }
+        .prose li { margin-bottom: 0.75em; }
+        .prose li:last-child { margin-bottom: 0; }
     </style>
 </head>
 <body class="bg-black text-white min-h-screen flex flex-col">
