Update Terms of Service page width to match header

--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -25,7 +25,7 @@
             </nav>
         </div>
     </header>
-    <main class="flex-1 max-w-3xl mx-auto py-12 px-4">
+    <main class="flex-1 w-full max-w-6xl mx-auto py-12 px-4">
         <h1 class="text-4xl font-bold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600">이용약관</h1>
         <div class="prose prose-invert max-w-none text-gray-200">
             <!-- Terms content starts here -->
