Make main chapter headings bigger and bolder

--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -9,8 +9,8 @@
     <style>
         html { scroll-behavior: smooth; }
         .prose p { margin-bottom: 1.5em; }
-        .prose h2 { margin-top: 2em; margin-bottom: 1em; }
-        .prose h3 { margin-top: 1.5em; margin-bottom: 0.75em; }
+        .prose h2 { margin-top: 2em; margin-bottom: 1em; font-size: 1.75em; font-weight: 700; }
+        .prose h3 { margin-top: 1.5em; margin-bottom: 0.75em; font-size: 1.25em; font-weight: 700; }
         .prose ol, .prose ul { margin-bottom: 1.5em; }
         .prose li { margin-bottom: 0.75em; }
         .prose li:last-child { margin-bottom: 0; }
