--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,8 @@
                         <h4 class="text-lg font-semibold mb-4">Legal</h4>
                         <ul class="space-y-2 text-gray-400">
                             <li><a href="https://www.rilo.life/terms-of-service.html" class="hover:text-white transition-colors">Terms of Service</a></li>
-                            <li><a href="#" class="hover:text-white transition-colors">Privacy Policy</a></li>
+                            <li><a href="https://www.rilo.life/privacy-policy.html" class="hover:text-white transition-colors">Privacy Policy</a></li>
+                            <li><a href="https://www.rilo.life/location-terms.html" class="hover:text-white transition-colors">위치기반서비스 이용약관</a></li>
                         </ul>
                     </div>
                 </div>
