Remove navigation from legal pages for deep linking

--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -9,7 +9,7 @@
     <style>
         html { scroll-behavior: smooth; }
         .prose p { margin-bottom: 1.5em; }
-        .prose h2 { margin-top: 2em; margin-bottom: 1em; font-size: 1.75em; font-weight: 700; }
+        .prose h2 { margin-top: 2em; margin-bottom: 1em; font-size: 1.5em; font-weight: 700; }
         .prose h3 { margin-top: 1.5em; margin-bottom: 0.75em; font-size: 1.25em; font-weight: 700; }
         .prose ol, .prose ul { margin-bottom: 1.5em; }
         .prose li { margin-bottom: 0.75em; }
@@ -18,11 +18,8 @@
 </head>
 <body class="bg-black text-white min-h-screen flex flex-col">
     <header class="py-6 px-4 bg-gradient-to-b from-purple-900/30 to-black border-b border-purple-900/20">
-        <div class="max-w-6xl mx-auto flex items-center justify-between">
-            <a href="/index.html" class="text-3xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600">Rilo</a>
-            <nav>
-                <a href="/index.html" class="text-gray-400 hover:text-white transition-colors text-lg">홈</a>
-            </nav>
+        <div class="max-w-6xl mx-auto">
+            <div class="text-3xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600">Rilo</div>
         </div>
     </header>
     <main class="flex-1 w-full max-w-6xl mx-auto py-12 px-4">
@@ -131,9 +128,6 @@
     </main>
     <footer class="bg-gradient-to-t from-purple-900/30 to-black py-12 px-4 border-t border-purple-900/20 mt-12">
         <div class="max-w-6xl mx-auto text-center text-gray-400">
-            <a href="/index.html" class="text-gray-400 hover:text-white transition-colors">홈</a> |
-            <a href="/terms-of-service.html" class="text-gray-400 hover:text-white transition-colors">이용약관</a> |
-            <a href="/privacy-policy.html" class="text-gray-400 hover:text-white transition-colors">개인정보처리방침</a>
             <div class="mt-6">&copy; 2025 Rilo. All rights reserved.</div>
         </div>
     </footer>
