--- a/public/location-terms.html
+++ b/public/location-terms.html
@@ -94,9 +94,9 @@
             <p>이 약관은 2025년 0월 00일부터 시행됩니다.</p>
         </div>
     </main>
-    <footer class="bg-gradient-to-t from-purple-900/30 to-black py-12 px-4 border-t border-purple-900/20 mt-12">
+    <footer class="py-8 px-4 bg-gradient-to-t from-purple-900/30 to-black border-t border-purple-900/20">
         <div class="max-w-6xl mx-auto text-center text-gray-400">
-            <div class="mt-6">&copy; 2025 Rilo. All rights reserved.</div>
+            <p>&copy; 2025 Rilo. All rights reserved.</p>
         </div>
     </footer>
 </body>
