Update homepage with Korean language support and improved image layout

--- a/public/location-terms.html
+++ b/public/location-terms.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rilo 위치기반서비스 이용약관 - 위치 기반 서비스의 이용 약관을 확인하세요.">
-    <title>위치기반서비스 이용약관 | Rilo</title>
+    <meta name="description" content="RILO 위치기반서비스 이용약관 - 위치 기반 서비스의 이용 약관을 확인하세요.">
+    <title>위치기반서비스 이용약관 - RILO</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="./dist/styles.css" rel="stylesheet">
     <style>
         html { scroll-behavior: smooth; }
@@ -14,15 +17,23 @@
         .prose ol, .prose ul { margin-bottom: 1.5em; }
         .prose li { margin-bottom: 0.75em; }
         .prose li:last-child { margin-bottom: 0; }
+        body {
+            font-family: 'Poppins', sans-serif;
+        }
     </style>
 </head>
 <body class="bg-black text-white min-h-screen flex flex-col">
     <header class="py-6 px-4 bg-gradient-to-b from-purple-900/30 to-black border-b border-purple-900/20">
         <div class="max-w-6xl mx-auto">
-            <div class="text-3xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600">Rilo</div>
+            <div class="text-3xl font-bold">
+                <img src="./images/RILO_Logo_TYPO.png" alt="RILO" class="h-12">
+            </div>
         </div>
     </header>
     <main class="flex-1 w-full max-w-6xl mx-auto py-12 px-4">
+        <div class="mb-8">
+            <img src="./images/RILO_Logo_TYPO.png" alt="RILO" class="h-12">
+        </div>
         <h1 class="text-4xl font-bold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600">위치기반서비스 이용약관</h1>
         <div class="prose prose-invert max-w-none text-gray-200">
             <h2>제 1 조 (목적)</h2>
@@ -96,7 +107,7 @@
     </main>
     <footer class="py-8 px-4 bg-gradient-to-t from-purple-900/30 to-black border-t border-purple-900/20">
         <div class="max-w-6xl mx-auto text-center text-gray-400">
-            <p>&copy; 2025 Rilo. All rights reserved.</p>
+            <p>&copy; 2025 RILO. All rights reserved.</p>
         </div>
     </footer>
 </body>
