--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rilo 이용약관 - 위치 기반 소셜 네트워킹 서비스의 이용 약관을 확인하세요.">
-    <title>이용약관 | Rilo</title>
+    <meta name="description" content="RILO 이용약관 - 위치 기반 소셜 네트워킹 서비스의 이용 약관을 확인하세요.">
+    <title>이용약관 - RILO</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="./dist/styles.css" rel="stylesheet">
     <style>
         html { scroll-behavior: smooth; }
@@ -14,21 +17,29 @@
         .prose ol, .prose ul { margin-bottom: 1.5em; }
         .prose li { margin-bottom: 0.75em; }
         .prose li:last-child { margin-bottom: 0; }
+        body {
+            font-family: 'Poppins', sans-serif;
+        }
     </style>
 </head>
 <body class="bg-black text-white min-h-screen flex flex-col">
     <header class="py-6 px-4 bg-gradient-to-b from-purple-900/30 to-black border-b border-purple-900/20">
         <div class="max-w-6xl mx-auto">
-            <div class="text-3xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600">Rilo</div>
+            <div class="text-3xl font-bold">
+                <img src="./images/RILO_Logo_TYPO.png" alt="RILO" class="h-12">
+            </div>
         </div>
     </header>
     <main class="flex-1 w-full max-w-6xl mx-auto py-12 px-4">
         <h1 class="text-4xl font-bold mb-8 bg-clip-text text-transparent bg-gradient-to-r from-purple-400 to-pink-600">이용약관</h1>
+        <div class="mb-8">
+            <img src="./images/RILO_Logo_TYPO.png" alt="RILO" class="h-12">
+        </div>
         <div class="prose prose-invert max-w-none text-gray-200">
             <!-- Terms content starts here -->
             <h2>제 1 장 총칙</h2>
             <h3>제 1 조 (목적)</h3>
-            <p>이 약관은 RILo(이하 "회사")이 제공하는 서비스(이하 "서비스")를 이용함에 있어 회사와 이용자의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.</p>
+            <p>이 약관은 RILO(이하 "회사")이 제공하는 서비스(이하 "서비스")를 이용함에 있어 회사와 이용자의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.</p>
             <h3>제 2 조 (정의)</h3>
             <ol>
                 <li>"서비스"란 회사가 제공하는 모바일 애플리케이션 및 관련 제반 서비스를 의미합니다.</li>
@@ -209,7 +220,7 @@
     </main>
     <footer class="py-8 px-4 bg-gradient-to-t from-purple-900/30 to-black border-t border-purple-900/20">
         <div class="max-w-6xl mx-auto text-center text-gray-400">
-            <p>&copy; 2025 Rilo. All rights reserved.</p>
+            <p>&copy; 2025 RILO. All rights reserved.</p>
         </div>
     </footer>
 </body>
