Fix language switch cache issue and update Korean slogan

--- a/public/index-kr.html
+++ b/public/index-kr.html
@@ -281,7 +281,7 @@
             // English button click
             engBtn.addEventListener('click', function() {
                 // Navigate to English page
-                window.location.href = 'index.html';
+                window.location.href = 'index.html?t=' + new Date().getTime();
             });
         });
     </script>
