--- a/public/index.html
+++ b/public/index.html
@@ -257,9 +257,6 @@
         </div>
     </footer>
     <script>
-        // Redirect to Korean version by default
-        window.location.href = 'index-kr.html';
-
         AOS.init({
             duration: 1000,
             once: false
@@ -286,7 +283,7 @@
             // Korean button click
             korBtn.addEventListener('click', function() {
                 // Navigate to Korean page
-                window.location.href = 'index-kr.html';
+                window.location.href = 'index-kr.html?t=' + new Date().getTime();
             });
         });
     </script>
