Fix: 이미지 컨테이너 배경 제거 및 모든 문구 Remember It, Log It! 으로 통일

--- a/public/index-kr.html
+++ b/public/index-kr.html
@@ -83,7 +83,7 @@
                 <img src="./images/RILO_Logo_TYPO.png" alt="RILO" class="h-4 md:h-6 mx-auto" style="height:4rem;max-width:auto;">
             </h1>
             <p class="text-sm md:text-xl mb-8 text-gray-200 font-light">
-                순간을 기억하는 기록, RILO
+                Remember It, Log It!
             </p>
             <div class="flex justify-center" style="gap: 80px;">
                 <a href="#" class="bg-white/10 hover:bg-gray-800/20 text-white px-6 py-2 rounded-full text-sm font-medium transition-all duration-300 hover:scale-110 hover:shadow-xl flex items-center">
@@ -115,7 +115,7 @@
                     </p>
                 </div>
                 <div class="relative">
-                    <div class="feature-image-container flex items-center justify-center bg-[#222] rounded-lg overflow-hidden">
+                    <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
                         <img src="/images/로그상세.png" alt="Discovery Feature" class="feature-image object-contain">
                     </div>
                 </div>
@@ -128,7 +128,7 @@
         <div class="max-w-6xl mx-auto">
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div class="order-2 md:order-1 relative">
-                    <div class="feature-image-container flex items-center justify-center bg-[#222] rounded-lg overflow-hidden">
+                    <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
                         <img src="/images/스팟상세.png" alt="Chat Feature" class="feature-image object-contain">
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                         </p>
                     </div>
                     <div class="relative">
-                        <div class="feature-image-container flex items-center justify-center bg-[#222] rounded-lg overflow-hidden">
+                        <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
                             <img src="/images/로그편집.png" alt="Dump Feature" class="feature-image object-contain">
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                 <!-- Row 2: Image left, Text right -->
                 <div class="grid md:grid-cols-2 gap-8 items-center py-8">
                     <div class="relative">
-                        <div class="feature-image-container flex items-center justify-center bg-[#222] rounded-lg overflow-hidden">
+                        <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
                             <img src="/images/촬영화면.png" alt="Remember Feature" class="feature-image object-contain">
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                         <img src="./images/RILO_Logo_TYPO.png" alt="RILO" class="h-5">
                     </h3>
                     <p class="text-gray-400 mb-4">
-                        순간을 기억하는 기록
+                        Remember It, Log It!
                     </p>
                     <div class="flex space-x-4">
                         <a href="https://www.instagram.com/rilo_life?igsh=OHN0anZwdmJsZGty&utm_source=qr" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors">
