--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
                     </p>
                 </div>
                 <div class="relative">
-                    <div class="feature-image-container flex items-center justify-center bg-[#222] rounded-lg overflow-hidden">
+                    <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
                         <img src="/images/로그상세.png" alt="Discovery Feature" class="feature-image object-contain">
                     </div>
                 </div>
@@ -129,7 +129,7 @@
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div class="order-2 md:order-1">
                     <div class="relative">
-                        <div class="feature-image-container flex items-center justify-center bg-[#222] rounded-lg overflow-hidden">
+                        <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
                             <img src="/images/스팟상세.png" alt="Chat Feature" class="feature-image object-contain">
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                         Experience the World Through Others' Eyes
                     </h2>
                     <p class="text-lg text-gray-300 mb-6 font-extralight">
-                        Every journey has a story. With RILO's discovery feed, you can explore real moments from real people — see where they went, what they captured, and follow their footsteps to new adventures
+                        Every journey has a story. With RILO, you can explore real moments — see where you went, what you captured, and follow your footsteps to new adventures
                     </p>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                         </p>
                     </div>
                     <div class="relative">
-                        <div class="feature-image-container flex items-center justify-center bg-[#222] rounded-lg overflow-hidden">
+                        <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
                             <img src="/images/로그편집.png" alt="Dump Feature" class="feature-image object-contain">
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                 <!-- Row 2: Image left, Text right -->
                 <div class="grid md:grid-cols-2 gap-8 items-center py-8">
                     <div class="relative">
-                        <div class="feature-image-container flex items-center justify-center bg-[#222] rounded-lg overflow-hidden">
+                        <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
                             <img src="/images/촬영화면.png" alt="Remember Feature" class="feature-image object-contain">
                         </div>
                     </div>
@@ -219,7 +219,7 @@
                         <img src="./images/RILO_Logo_TYPO.png" alt="RILO" class="h-5">
                     </h3>
                     <p class="text-gray-400 mb-4">
-                        Connecting communities through location-based social networking.
+                        Remember It, Log It!
                     </p>
                     <div class="flex space-x-4">
                         <a href="https://www.instagram.com/rilo_life?igsh=OHN0anZwdmJsZGty&utm_source=qr" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors">
