Refactor: 이미지 파일명을 영문으로 변경하여 로딩 안정성 개선

--- a/public/index-kr.html
+++ b/public/index-kr.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="relative">
                     <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                        <img src="./images/로그상세.png" alt="Discovery Feature" class="feature-image object-contain">
+                        <img src="./images/feature-log-detail.png" alt="Discovery Feature" class="feature-image object-contain">
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div class="order-2 md:order-1 relative">
                     <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                        <img src="./images/스팟상세.png" alt="Chat Feature" class="feature-image object-contain">
+                        <img src="./images/feature-spot-detail.png" alt="Chat Feature" class="feature-image object-contain">
                     </div>
                 </div>
                 <div class="order-1 md:order-2 flex flex-col items-start">
@@ -160,7 +160,7 @@
                     </div>
                     <div class="relative">
                         <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                            <img src="./images/로그편집.png" alt="Dump Feature" class="feature-image object-contain">
+                            <img src="./images/feature-log-edit.png" alt="Dump Feature" class="feature-image object-contain">
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                 <div class="grid md:grid-cols-2 gap-8 items-center py-8">
                     <div class="relative">
                         <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                            <img src="./images/촬영화면.png" alt="Remember Feature" class="feature-image object-contain">
+                            <img src="./images/feature-camera-view.png" alt="Remember Feature" class="feature-image object-contain">
                         </div>
                     </div>
                     <div class="flex items-center">
