feat: /kr 경로로 한글 페이지 이동 및 언어 자동 리다이렉트, KOR 버튼 동작 개선

--- a/public/index.html
+++ b/public/index.html
@@ -282,10 +282,13 @@
 
             // Korean button click
             korBtn.addEventListener('click', function() {
-                // Navigate to Korean page
-                window.location.href = 'index-kr.html?t=' + new Date().getTime();
+                window.location.href = '/kr';
             });
         });
+
+        if (navigator.language.startsWith('ko') && !window.location.pathname.startsWith('/kr')) {
+            window.location.replace('/kr');
+        }
     </script>
 </body>
 </html> 
