--- a/kr/index.html
+++ b/kr/index.html
@@ -271,11 +271,7 @@
 
             // Korean button click
             korBtn.addEventListener('click', function() {
-                // Already on Korean page, just update visual state
-                korBtn.classList.remove('inactive');
-                korBtn.classList.add('active');
-                engBtn.classList.remove('active');
-                engBtn.classList.add('inactive');
+                // 이미 한글 페이지이므로 아무 동작도 하지 않음
             });
 
             // English button click
