--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
             <p class="text-sm md:text-xl mb-8 text-gray-200 font-light">
                 Remember It, Log It!
             </p>
-            <div class="flex justify-center" style="gap: 80px;">
+            <div class="flex justify-center" style="gap: 40px;">
                 <a href="#" class="bg-white/10 hover:bg-gray-800/20 text-white px-6 py-2 rounded-full text-sm font-medium transition-all duration-300 hover:scale-110 hover:shadow-xl flex items-center">
                     <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.08 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 7.5c-.03-2.17 1.73-3.14 1.81-3.2.99-1.49 2.65-2.44 4.03-2.47.17 1.71-.47 3.46-1.5 4.59-.95 1.05-2.02 1.76-3.04 1.72-.15-1.15.45-2.35 1.7-3.64z"/>
@@ -244,9 +244,9 @@
                     <div>
                         <h4 class="text-lg font-semibold mb-4">Legal</h4>
                         <ul class="space-y-2 text-gray-400">
-                            <li><a href="https://www.rilo.life/terms-of-service.html" class="hover:text-white transition-colors">Terms of Service</a></li>
-                            <li><a href="https://www.rilo.life/privacy-policy.html" class="hover:text-white transition-colors">Privacy Policy</a></li>
-                            <li><a href="https://www.rilo.life/location-terms.html" class="hover:text-white transition-colors">위치기반서비스 이용약관</a></li>
+                            <li><a href="terms-of-service.html" class="hover:text-white transition-colors">Terms of Service</a></li>
+                            <li><a href="privacy-policy.html" class="hover:text-white transition-colors">Privacy Policy</a></li>
+                            <li><a href="location-terms.html" class="hover:text-white transition-colors">위치기반서비스 이용약관</a></li>
                         </ul>
                     </div>
                 </div>
@@ -282,13 +282,10 @@
 
             // Korean button click
             korBtn.addEventListener('click', function() {
+                // Navigate to Korean page
                 window.location.href = '/kr';
             });
         });
-
-        if (navigator.language.startsWith('ko') && !window.location.pathname.startsWith('/kr')) {
-            window.location.replace('/kr');
-        }
     </script>
 </body>
 </html> 
