--- a/kr/index.html
+++ b/kr/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link href="../dist/styles.css" rel="stylesheet">
+    <link href="/Rilo-homepage/dist/styles.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <style>
@@ -64,7 +64,7 @@
 <body class="bg-[#1F1F1F] text-white">
     <!-- Hero Section -->
     <section class="relative w-full min-h-screen flex items-center justify-center overflow-hidden bg-[#1F1F1F]">
-        <div class="absolute inset-0" style="background-image: url('../images/new_web_bg.png'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
+        <div class="absolute inset-0" style="background-image: url('/Rilo-homepage/images/new_web_bg.png'); background-size: cover; background-position: center; background-repeat: no-repeat;"></div>
         
         <!-- Language Selector -->
         <div class="language-selector">
@@ -80,7 +80,7 @@
         
         <div class="relative z-20 text-center px-4">
             <h1 class="text-5xl md:text-7xl font-bold mb-6">
-                <img src="../images/RILO_Logo_TYPO.png" alt="RILO" class="h-4 md:h-6 mx-auto" style="height:4rem;max-width:auto;">
+                <img src="/Rilo-homepage/images/RILO_Logo_TYPO.png" alt="RILO" class="h-4 md:h-6 mx-auto" style="height:4rem;max-width:auto;">
             </h1>
             <p class="text-sm md:text-xl mb-8 text-gray-200 font-light">
                 Remember It, Log It!
@@ -116,7 +116,7 @@
                 </div>
                 <div class="relative">
                     <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                        <img src="../images/feature-log-detail.png" alt="Discovery Feature" class="feature-image object-contain">
+                        <img src="/Rilo-homepage/images/feature-log-detail.png" alt="Discovery Feature" class="feature-image object-contain">
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div class="order-2 md:order-1 relative">
                     <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                        <img src="../images/feature-spot-detail.png" alt="Chat Feature" class="feature-image object-contain">
+                        <img src="/Rilo-homepage/images/feature-spot-detail.png" alt="Chat Feature" class="feature-image object-contain">
                     </div>
                 </div>
                 <div class="order-1 md:order-2 flex flex-col items-start">
@@ -160,7 +160,7 @@
                     </div>
                     <div class="relative">
                         <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                            <img src="../images/feature-log-edit.png" alt="Dump Feature" class="feature-image object-contain">
+                            <img src="/Rilo-homepage/images/feature-log-edit.png" alt="Dump Feature" class="feature-image object-contain">
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                 <div class="grid md:grid-cols-2 gap-8 items-center py-8">
                     <div class="relative">
                         <div class="feature-image-container flex items-center justify-center rounded-lg overflow-hidden">
-                            <img src="../images/feature-camera-view.png" alt="Remember Feature" class="feature-image object-contain">
+                            <img src="/Rilo-homepage/images/feature-camera-view.png" alt="Remember Feature" class="feature-image object-contain">
                         </div>
                     </div>
                     <div class="flex items-center">
@@ -214,7 +214,7 @@
             <div class="grid md:grid-cols-2 gap-8">
                 <div>
                     <h3 class="text-2xl font-bold mb-4">
-                        <img src="../images/RILO_Logo_TYPO.png" alt="RILO" class="h-5">
+                        <img src="/Rilo-homepage/images/RILO_Logo_TYPO.png" alt="RILO" class="h-5">
                     </h3>
                     <p class="text-gray-400 mb-4">
                         Remember It, Log It!
