--- a/location-terms.html
+++ b/location-terms.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link href="/Rilo-homepage/dist/styles.css" rel="stylesheet">
+    <link href="/dist/styles.css" rel="stylesheet">
     <style>
         html { scroll-behavior: smooth; }
         .prose p { margin-bottom: 1.5em; }
@@ -25,7 +25,7 @@
 </head>
 <body class="bg-[#1F1F1F] text-white min-h-screen flex flex-col" style="background-image: none !important;">
     <main class="flex-1 w-full max-w-6xl mx-auto py-12 px-4 flex flex-col items-start">
-        <a href="index.html" class="mb-6"><img src="/Rilo-homepage/images/RILO_Logo_TYPO.png" alt="RILO 로고" style="height: 3rem;" /></a>
+        <a href="index.html" class="mb-6"><img src="/images/RILO_Logo_TYPO.png" alt="RILO 로고" style="height: 3rem;" /></a>
         <h1 class="text-4xl font-bold mb-6 text-white m-0">위치기반서비스 이용약관</h1>
         <section class="bg-[#1F1F1F] text-white rounded-lg shadow-lg p-8">
             <div class="prose max-w-none text-gray-200">
