--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -21,12 +21,53 @@
             font-family: 'Poppins', sans-serif;
         }
         .prose h1 { color: #fff !important; }
+        @media (max-width: 768px) {
+            .legal-logo {
+                height: 1.5rem !important;
+                max-width: 80px !important;
+                margin-bottom: 12px !important;
+                display: block;
+            }
+            h1 {
+                font-size: 24px !important;
+                text-align: left !important;
+                margin-bottom: 0 !important;
+                font-weight: 700 !important;
+            }
+            h2 {
+                font-size: 18px !important;
+                text-align: left !important;
+                margin-top: 32px !important;
+                margin-bottom: 12px !important;
+                font-weight: 600 !important;
+            }
+            h3 {
+                font-size: 16px !important;
+                text-align: left !important;
+                margin-top: 24px !important;
+                margin-bottom: 8px !important;
+                font-weight: 500 !important;
+            }
+            main, .legal-body, .prose {
+                font-size: 12px !important;
+                line-height: 1.6 !important;
+                text-align: left !important;
+                padding-left: 0 !important;
+                padding-right: 0 !important;
+            }
+            .legal-header {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                margin-bottom: 8px !important;
+                padding-left: 30px !important;
+            }
+        }
     </style>
 </head>
 <body class="bg-[#1F1F1F] text-white min-h-screen flex flex-col">
     <main class="flex-1 w-full max-w-6xl mx-auto py-12 px-4 flex flex-col items-start">
-        <a href="index.html" class="mb-6"><img src="/images/RILO_Logo_TYPO.png" alt="RILO 로고" style="height: 3rem;" /></a>
-        <h1 class="text-4xl font-bold mb-6 text-white m-0">서비스 이용약관</h1>
+        <a href="index.html" class="mb-6 legal-header"><img src="/images/RILO_Logo_TYPO.png" alt="RILO 로고" class="legal-logo" /><h1>서비스 이용약관</h1></a>
         <section class="bg-[#1F1F1F] text-white rounded-lg shadow-lg p-8">
             <div class="prose max-w-none text-gray-200">
                 <!-- Terms content starts here -->
