--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             scroll-behavior: smooth;
         }
         body {
-            font-family: 'Poppins', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            font-family: 'Poppins', 'Pretendard', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
         .language-selector {
             position: fixed;
@@ -368,7 +368,7 @@
                     <div class="feature3-img">
                         <div class="feature-image-container flex items-center justify-center rounded-lg">
                             <img src="/images/feature-log-edit.png" alt="Dump Feature" class="feature-image object-contain">
-                        </div>
+                </div>
                     </div>
                 </div>
                 <!-- Row 2: 이미지(좌) + 텍스트(우) -->
@@ -380,7 +380,7 @@
                     </div>
                     <div class="feature3-text">
                         <p class="feature-desc text-lg text-gray-300 font-extralight">Don't miss any moment - from random photos<br>to small moments on the street.</p>
-                    </div>
+                </div>
                 </div>
             </div>
         </div>
