--- a/kr/index.html
+++ b/kr/index.html
@@ -15,7 +15,7 @@
             scroll-behavior: smooth;
         }
         body {
-            font-family: 'Poppins', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            font-family: 'Poppins', 'Pretendard', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
         .language-selector {
             position: fixed;
