--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -18,9 +18,22 @@
         .prose li { margin-bottom: 0.75em; }
         .prose li:last-child { margin-bottom: 0; }
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Poppins', 'Pretendard', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
         .prose h1 { color: #fff !important; }
+        .legal-logo {
+            height: 3rem;
+            max-width: 160px;
+            margin-bottom: 24px;
+            display: block;
+        }
+        h1 {
+            font-size: 40px;
+            font-weight: 700;
+            text-align: left;
+            margin-bottom: 0;
+            color: #fff;
+        }
         @media (max-width: 768px) {
             .legal-logo {
                 height: 1.5rem !important;
@@ -70,106 +83,106 @@
         <a href="index.html" class="mb-6 legal-header"><img src="/images/RILO_Logo_TYPO.png" alt="RILO 로고" class="legal-logo" /><h1>개인정보처리방침</h1></a>
         <section class="bg-[#1F1F1F] text-white rounded-lg shadow-lg p-8">
             <div class="prose max-w-none text-gray-200">
-                <h2>제 1 조 (총칙)</h2>
-                <ol>
-                    <li>본 개인정보 처리방침은 RILO(이하 '회사')가 제공하는 서비스(이하 '서비스')를 이용하는 과정에서 수집되는 개인정보의 처리 방식에 대해 설명합니다.</li>
-                    <li>회사는 이용자의 개인정보를 소중하게 다루며, 관련 법령을 준수합니다.</li>
-                    <li>본 방침은 관련 법령 및 서비스 정책에 따라 변경될 수 있으며, 변경 사항은 공지사항을 통해 안내됩니다.</li>
-                </ol>
+            <h2>제 1 조 (총칙)</h2>
+            <ol>
+                <li>본 개인정보 처리방침은 RILO(이하 '회사')가 제공하는 서비스(이하 '서비스')를 이용하는 과정에서 수집되는 개인정보의 처리 방식에 대해 설명합니다.</li>
+                <li>회사는 이용자의 개인정보를 소중하게 다루며, 관련 법령을 준수합니다.</li>
+                <li>본 방침은 관련 법령 및 서비스 정책에 따라 변경될 수 있으며, 변경 사항은 공지사항을 통해 안내됩니다.</li>
+            </ol>
 
-                <h2>제 2 조 (수집하는 개인정보 및 수집 방법)</h2>
-                <ol>
-                    <li>회사는 서비스 제공을 위해 다음과 같은 개인정보를 수집할 수 있습니다.
-                        <ul>
-                            <li>필수 수집 정보
-                                <ul>
-                                    <li>000, 000, 000 (회원가입 시)</li>
-                                    <li>서비스 이용 기록, 기기 정보 (자동 수집)</li>
-                                </ul>
-                            </li>
-                            <li>선택 수집 정보 (이용자가 직접 제공하는 경우)
-                                <ul>
-                                    <li>사진 및 위치 태그 (이용자가 업로드 시)</li>
-                                    <li>기타 이용자가 설정한 프로필 정보</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>회사는 이용자가 회원가입을 하거나 서비스를 이용하는 과정에서 개인정보를 직접 입력하는 방식으로 개인정보를 수집합니다.</li>
-                    <li>서비스 이용 과정에서 기기 정보, 접속 기록 등의 정보가 자동으로 수집될 수 있습니다.</li>
-                </ol>
+            <h2>제 2 조 (수집하는 개인정보 및 수집 방법)</h2>
+            <ol>
+                <li>회사는 서비스 제공을 위해 다음과 같은 개인정보를 수집할 수 있습니다.
+                    <ul>
+                        <li>필수 수집 정보
+                            <ul>
+                                <li>이름, 이메일 (회원가입 시)</li>
+                                <li>서비스 이용 기록, 기기 정보 (자동 수집)</li>
+                            </ul>
+                        </li>
+                        <li>선택 수집 정보 (이용자가 직접 제공하는 경우)
+                            <ul>
+                                <li>사진 및 위치 태그 (이용자가 업로드 시)</li>
+                                <li>성별, 생년월일 (이용자가 직접 제공한 프로필 정보)</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>회사는 이용자가 회원가입을 하거나 서비스를 이용하는 과정에서 개인정보를 직접 입력하는 방식으로 개인정보를 수집합니다.</li>
+                <li>서비스 이용 과정에서 기기 정보, 접속 기록 등의 정보가 자동으로 수집될 수 있습니다.</li>
+            </ol>
 
-                <h2>제 3 조 (개인정보의 이용 목적)</h2>
-                <ol>
-                    <li>회사는 수집한 개인정보를 다음과 같은 목적으로 이용합니다.
-                        <ol>
-                            <li>서비스 제공 및 운영 (로그 자동 생성, 체크인 기능 등)</li>
-                            <li>계정 관리 및 고객 지원</li>
-                            <li>서비스 개선 및 맞춤형 콘텐츠 추천</li>
-                            <li>법적 의무 준수를 위한 기록 보관</li>
-                        </ol>
-                    </li>
-                    <li>회사는 이용자의 개인정보를 법령에서 허용하는 범위 내에서만 이용하며, 그 외의 용도로는 사용하지 않습니다.</li>
-                    <li>서비스 개선 및 통계 분석을 위해 개인정보를 익명 처리한 후 활용할 수 있습니다.</li>
-                </ol>
+            <h2>제 3 조 (개인정보의 이용 목적)</h2>
+            <ol>
+                <li>회사는 수집한 개인정보를 다음과 같은 목적으로 이용합니다.
+                    <ol>
+                        <li>서비스 제공 및 운영 (로그 자동 생성 및 공유 등)</li>
+                        <li>계정 관리 및 고객 지원</li>
+                        <li>서비스 개선 및 맞춤형 콘텐츠 추천</li>
+                        <li>법적 의무 준수를 위한 기록 보관</li>
+                    </ol>
+                </li>
+                <li>회사는 이용자의 개인정보를 법령에서 허용하는 범위 내에서만 이용하며, 그 외의 용도로는 사용하지 않습니다.</li>
+                <li>서비스 개선 및 통계 분석을 위해 개인정보를 익명 처리한 후 활용할 수 있습니다.</li>
+            </ol>
 
-                <h2>제 4 조 (개인정보의 보유 및 삭제)</h2>
-                <ol>
-                    <li>회사는 개인정보를 이용자가 동의한 범위 내에서 보관하며, 법령에서 정한 기간 동안만 보유합니다.</li>
-                    <li>이용자는 언제든지 계정 삭제 및 개인정보 삭제를 요청할 수 있으며, 요청이 접수된 후 신속히 처리됩니다.</li>
-                    <li>일부 데이터는 서비스 운영 및 법적 의무 준수를 위해 일정 기간 유지될 수 있습니다.</li>
-                </ol>
+            <h2>제 4 조 (개인정보의 보유 및 삭제)</h2>
+            <ol>
+                <li>회사는 개인정보를 이용자가 동의한 범위 내에서 보관하며, 법령에서 정한 기간 동안만 보유합니다.</li>
+                <li>이용자는 언제든지 계정 삭제 및 개인정보 삭제를 요청할 수 있으며, 요청이 접수된 후 신속히 처리됩니다.</li>
+                <li>일부 데이터는 서비스 운영 및 법적 의무 준수를 위해 일정 기간 유지될 수 있습니다.</li>
+            </ol>
 
-                <h2>제 5 조 (개인정보의 제3자 제공 및 처리 위탁)</h2>
-                <ol>
-                    <li>회사는 이용자의 동의 없이 개인정보를 제3자에게 제공하지 않습니다.</li>
-                    <li>단, 법령에 따라 수사기관, 법원 또는 기타 정부기관의 요청이 있는 경우에는 관련 법률에 따라 제공될 수 있습니다.</li>
-                    <li>서비스 운영을 위해 필요한 경우, 개인정보 처리를 외부에 위탁할 수 있으며, 수탁업체가 개인정보를 안전하게 관리하도록 조치를 취합니다.</li>
-                </ol>
+            <h2>제 5 조 (개인정보의 제3자 제공 및 처리 위탁)</h2>
+            <ol>
+                <li>회사는 이용자의 동의 없이 개인정보를 제3자에게 제공하지 않습니다.</li>
+                <li>단, 법령에 따라 수사기관, 법원 또는 기타 정부기관의 요청이 있는 경우에는 관련 법률에 따라 제공될 수 있습니다.</li>
+                <li>서비스 운영을 위해 필요한 경우, 개인정보 처리를 외부에 위탁할 수 있으며, 수탁업체가 개인정보를 안전하게 관리하도록 조치를 취합니다.</li>
+            </ol>
 
-                <h2>제 6 조 (개인정보 보호를 위한 조치)</h2>
-                <ol>
-                    <li>회사는 이용자의 개인정보 보호를 위해 다음과 같은 보안 조치를 적용합니다.
-                        <ol>
-                            <li>데이터 암호화 및 접근 제한</li>
-                            <li>내부 보안 프로세스 운영</li>
-                            <li>외부 공격 방지를 위한 보안 시스템 적용</li>
-                        </ol>
-                    </li>
-                    <li>회사는 개인정보 접근 권한을 최소한으로 제한하며, 개인정보 보호를 위한 내부 교육을 시행합니다.</li>
-                    <li>이용자의 개인정보 유출 방지를 위해 정기적인 보안 점검을 실시합니다.</li>
-                </ol>
+            <h2>제 6 조 (개인정보 보호를 위한 조치)</h2>
+            <ol>
+                <li>회사는 이용자의 개인정보 보호를 위해 다음과 같은 보안 조치를 적용합니다.
+                    <ol>
+                        <li>데이터 암호화 및 접근 제한</li>
+                        <li>내부 보안 프로세스 운영</li>
+                        <li>외부 공격 방지를 위한 보안 시스템 적용</li>
+                    </ol>
+                </li>
+                <li>회사는 개인정보 접근 권한을 최소한으로 제한하며, 개인정보 보호를 위한 내부 교육을 시행합니다.</li>
+                <li>이용자의 개인정보 유출 방지를 위해 정기적인 보안 점검을 실시합니다.</li>
+            </ol>
 
-                <h2>제 7 조 (이용자의 권리 및 행사 방법)</h2>
-                <ol>
-                    <li>이용자는 언제든지 개인정보를 조회, 수정, 삭제 요청할 수 있습니다.</li>
-                    <li>계정 설정을 통해 일부 개인정보를 직접 관리할 수 있으며, 삭제 요청 시 고객센터 또는 이메일을 통해 접수할 수 있습니다.</li>
-                    <li>이용자는 개인정보 제공에 대한 동의를 철회할 수 있으며, 철회 시 일부 서비스 이용이 제한될 수 있습니다.</li>
-                </ol>
+            <h2>제 7 조 (이용자의 권리 및 행사 방법)</h2>
+            <ol>
+                <li>이용자는 언제든지 개인정보를 조회, 수정, 삭제 요청할 수 있습니다.</li>
+                <li>계정 설정을 통해 일부 개인정보를 직접 관리할 수 있으며, 삭제 요청 시 고객센터 또는 이메일을 통해 접수할 수 있습니다.</li>
+                <li>이용자는 개인정보 제공에 대한 동의를 철회할 수 있으며, 철회 시 일부 서비스 이용이 제한될 수 있습니다.</li>
+            </ol>
 
-                <h2>제 8 조 (개인정보 보호 책임자 및 문의처)</h2>
-                <ol>
-                    <li>회사는 이용자의 개인정보 보호를 위해 개인정보 보호책임자 및 위치정보관리책임자를 지정하고 있습니다.</li>
-                    <li>담당자의 역할은 이용자의 개인정보 및 위치정보 보호, 관련 문의 및 불만 처리 담당입니다.</li>
-                    <li>개인정보 보호책임자 및 위치정보관리책임자의 정보는 다음과 같습니다.
-                        <ol>
-                            <li>담당자 : 개인정보 보호책임자 / 위치정보관리책임자</li>
-                            <li>이메일 : 000</li>
-                            <li>문의처 : 000</li>
-                        </ol>
-                    </li>
-                </ol>
+            <h2>제 8 조 (개인정보 보호 책임자 및 문의처)</h2>
+            <ol>
+                <li>회사는 이용자의 개인정보 보호를 위해 개인정보 보호책임자 및 위치정보관리책임자를 지정하고 있습니다.</li>
+                <li>담당자의 역할은 이용자의 개인정보 및 위치정보 보호, 관련 문의 및 불만 처리 담당입니다.</li>
+                <li>개인정보 보호책임자 및 위치정보관리책임자의 정보는 다음과 같습니다.
+                    <ol>
+                        <li>① 담당자 : 개인정보 보호책임자 / 위치정보관리책임자</li>
+                        <li>② 이메일 : plogteam.dev@gmail.com</li>
+                        <li>③ 문의처 : RILO 팀</li>
+                    </ol>
+                </li>
+            </ol>
 
-                <h2>제 9 조 (개인정보 처리방침의 변경 및 공지)</h2>
-                <ol>
-                    <li>본 개인정보 처리방침은 필요에 따라 변경될 수 있으며, 중요한 변경이 있을 경우 사전 공지합니다.</li>
-                    <li>변경된 개인정보 처리방침은 서비스 내 공지사항을 통해 안내되며, 이용자의 권리 또는 의무에 중대한 영향을 미치는 변경 사항이 있을 경우 이메일을 통해 별도 공지할 수 있습니다.</li>
-                    <li>이용자는 개인정보 보호 관련 문의 사항이 있을 경우, 고객센터를 통해 문의할 수 있습니다.</li>
-                </ol>
+            <h2>제 9 조 (개인정보 처리방침의 변경 및 공지)</h2>
+            <ol>
+                <li>본 개인정보 처리방침은 필요에 따라 변경될 수 있으며, 중요한 변경이 있을 경우 사전 공지합니다.</li>
+                <li>변경된 개인정보 처리방침은 서비스 내 공지사항을 통해 안내되며, 이용자의 권리 또는 의무에 중대한 영향을 미치는 변경 사항이 있을 경우 이메일을 통해 별도 공지할 수 있습니다.</li>
+                <li>이용자는 개인정보 보호 관련 문의 사항이 있을 경우, 고객센터를 통해 문의할 수 있습니다.</li>
+            </ol>
 
-                <h2>부칙</h2>
-                <p>제1조. 본 개인정보처리방침은 2024년 XX월 XX일부터 시행됩니다.</p>
-            </div>
+            <h2>부칙</h2>
+            <p>제1조. 본 개인정보처리방침은 2025년 7월 11일부터 시행됩니다.</p>
+        </div>
         </section>
     </main>
     <footer class="py-8 px-4 bg-[#1F1F1F] border-t border-gray-800">
